# agent-registration

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  default.nix  package.json  pnpm-lock.yaml
dnas/agent-registration-invite-only/: dna.yaml
dnas/agent-registration-open/: dna.yaml
happs/agent-registration-invite-only/: .hcignore  app.json  build-deps.sh
happs/agent-registration-invite-only/zomes/agent_registration/code/: .hcbuild
happs/agent-registration-invite-only/zomes/social_triangulation/: zome.json
happs/agent-registration-invite-only/zomes/social_triangulation/code/: .hcbuild
happs/agent-registration-open/: app.json
happs/agent-registration-open/zomes/agent_registration/: zome.json
happs/agent-registration-open/zomes/agent_registration/code/: .hcbuild  Cargo.toml
happs/agent-registration-open/zomes/agent_registration/code/src/: lib.rs
lib/lib/: Cargo.toml
lib/lib/src/: lib.rs
lib/storage/: Cargo.toml
lib/storage/src/: lib.rs
lib/storage_consts/src/: lib.rs
test/: init.js  package-lock.json  package.json  test_agent_registration_trait.js
zome/lib/: Cargo.toml
zome/lib/src/: lib.rs
zome/rpc/: Cargo.toml
zome/rpc/src/: lib.rs
zome/storage/: Cargo.toml
zome/storage/src/: lib.rs
zome/storage_consts/: Cargo.toml
zome/storage_consts/src/: lib.rs
zome/zome/: Cargo.toml
zome/zome/src/: lib.rs
