[package]
name = "hc_zome_agent_registration"
version = "0.1.0"
authors = ["pospi <pospi@spadgos.com>"]
edition = "2018"

[dependencies]
serde = "=1.0.89"
serde_json = { version = "=1.0.39", features = ["preserve_order"] }
# :DUPE: hdk-rust-revid
hdk = "=0.0.42-alpha5"
hdk_proc_macros = "=0.0.42-alpha5"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]
