[package]
name = "hc_zome_agent_registration"
version = "0.1.0"
authors = ["pospi <pospi@spadgos.com>"]
edition = "2018"

[dependencies]
serde = "1.0.104"
serde_json = { version = "1.0.47", features = ["preserve_order"] }
hdk = "~0.0.49-alpha1"
hdk_proc_macros = "~0.0.49-alpha1"

hc_zome_agent_registration_storage = { path = "../../../../../lib/storage" }
hc_zome_agent_registration_lib = { path = "../../../../../lib/lib" }

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]
